Add model selection cell to network_training

--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from models.bi_lstm import bi_LSTM\n",
+    "# from models.transformer import Transformer\n",
+    "# from models.bert_inspired import BertInspired\n",
     "from utils.tools import dotdict"
    ]
   },
@@ -198,19 +200,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_type = \"biLSTM\" # \"bert_inspired\" \"transformer\" or \"biLSTM\"\n",
+    "\n",
+    "model = None\n",
+    "if model_type == \"biLSTM\":\n",
+    "    # Create model\n",
+    "    config = dotdict({\n",
+    "        \"input_dim\": 128,\n",
+    "        \"hidden_dim\": 128,\n",
+    "        \"output_dim\": 9,\n",
+    "        \"num_layers\": 2,\n",
+    "        \"model_type\": model_type\n",
+    "    })\n",
+    "    # create model\n",
+    "    model = bi_LSTM(config)\n",
+    "    model.to(device)\n",
+    "# elif model_type == \"transformer\":\n",
+    "#     # 0 = ????\n",
+    "#     config = dotdict({\n",
+    "#         \"enc_in\": 128,\n",
+    "#         \"dec_in\": 128,\n",
+    "#         \"c_out\": 9,\n",
+    "#         \"d_model\": 128,\n",
+    "#         \"dropout\": .05,\n",
+    "#         \"output_attention\": False,\n",
+    "#         \"n_heads\": 8,\n",
+    "#         \"d_ff\": None,\n",
+    "#         \"activation\": \"gelu\",\n",
+    "#         \"e_layers\": 2,\n",
+    "#         \"d_layers\": 1,\n",
+    "#         \"model_type\": model_type\n",
+    "#     })\n",
+    "#     model = Transformer(config)\n",
+    "#     model.to(device)\n",
+    "# elif model_type == \"bert_inspired\":\n",
+    "#     config = dotdict({\n",
+    "#         \"enc_in\": 128,\n",
+    "#         \"c_out\": 9,\n",
+    "#         \"d_model\": 128,\n",
+    "#         \"dropout\": .05,\n",
+    "#         \"output_attention\": False,\n",
+    "#         \"n_heads\": 8,\n",
+    "#         \"d_ff\": None,\n",
+    "#         \"activation\": \"gelu\",\n",
+    "#         \"e_layers\": 4,\n",
+    "#         \"model_type\": model_type\n",
+    "#     })\n",
+    "#     model = BertInspired(config)\n",
+    "#     model.to(device)\n",
+    "\n",
+    "assert model is not None, \"Didn't select a valid model\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 3.0 Training\n",
     "\n",
     "# free_gpu_cache()\n",
-    "\n",
-    "# model parameters:\n",
-    "config = dotdict({\n",
-    "    \"input_dim\": 128,\n",
-    "    \"hidden_dim\": 128,\n",
-    "    \"output_dim\": 9,\n",
-    "    \"num_layers\": 2,\n",
-    "    \"model_type\": \"biLSTM\"\n",
-    "})\n",
-    "\n",
     "\n",
     "# training parameters\n",
     "batch_size = 32\n",
@@ -221,10 +271,6 @@
     "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
     "    batch_size, load_datasets(data_id=\"_5s_50hz\", print_out=True)\n",
     ")\n",
-    "\n",
-    "# create model\n",
-    "model = bi_LSTM(config)\n",
-    "model.to(device)\n",
     "\n",
     "# print (\"device name: \", torch.cuda.get_device_name(0))\n",
     "# print (\"model.type: \", myModel.model_type)\n",
