--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import time\n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -114,6 +116,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class my_model(nn.Module):\n",
+    "    def __init__(self, input_size, output_size, hidden_dim, n_layers):\n",
+    "        super(my_model, self).__init__()\n",
+    "\n",
+    "        # Defining some parameters\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.n_layers = n_layers\n",
+    "\n",
+    "        #Defining the layers\n",
+    "        # RNN Layer\n",
+    "        self.rnn = nn.RNN(input_size, hidden_dim, n_layers, batch_first=True)   \n",
+    "        # Fully connected layer\n",
+    "        self.fc = nn.Linear(hidden_dim, output_size)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        batch_size = x.size(0)\n",
+    "\n",
+    "        # Initializing hidden state for first input using method defined below\n",
+    "        hidden = self.init_hidden(batch_size)\n",
+    "\n",
+    "        # Passing in the input and hidden state into the model and obtaining outputs\n",
+    "        out, hidden = self.rnn(x, hidden)\n",
+    "        \n",
+    "        # Reshaping the outputs such that it can be fit into the fully connected layer\n",
+    "        out = out.contiguous().view(-1, self.hidden_dim)\n",
+    "        out = self.fc(out)\n",
+    "        \n",
+    "        return out, hidden\n",
+    "    \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        # This method generates the first hidden state of zeros which we'll use in the forward pass\n",
+    "        # We'll send the tensor holding the hidden state to the device we specified earlier as well\n",
+    "        hidden = torch.zeros(self.n_layers, batch_size, self.hidden_dim)\n",
+    "        return hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create model\n",
+    "model = my_model(128, 9, 32, 2)\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_step(batch):\n",
+    "    pass\n",
+    "\n",
+    "def test_model(model):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(dataset, epochs):\n",
+    "  # A. For each epoch, do the following:\n",
+    "  for epoch in range(epochs):\n",
+    "    start = time.time()\n",
+    "    # 1 - For each batch of the epoch, \n",
+    "    for batch in dataset:\n",
+    "      # 1.a - run the custom \"train_step\" function\n",
+    "      # we just declared above\n",
+    "      train_step(batch)\n",
+    "\n",
+    "    # 4 - Print out the completed epoch no. and the time spent\n",
+    "    print ('Time for epoch {} is {} sec'.format(epoch + 1, time.time()-start))\n",
+    "\n",
+    "  test_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -146,15 +238,15 @@
     "# 4.0 model training\n",
     "\n",
     "# training parameters\n",
-    "batch_size = 32\n",
-    "learning_rate = 0.001\n",
+    "batch_size = 10\n",
     "num_epochs = 5\n",
     "\n",
     "# get dataloaders\n",
     "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
     "    batch_size, load_datasets(data_id=\"_5s_50hz\", print_out=True)\n",
     ")\n",
-    "\n"
+    "\n",
+    "train(train_dataset, num_epochs)"
    ]
   }
  ],
