small changes to convert to midi

--- a/convert_to_midi.ipynb
+++ b/convert_to_midi.ipynb
@@ -98,11 +98,11 @@
     "            first_ = True\n",
     "            for n, v in zip(on_notes, on_notes_vol):\n",
     "                new_time = last_time if first_ else 0\n",
-    "                track.append(mido.Message('note_on', note=n + 20, velocity=v, time=new_time))\n",
+    "                track.append(mido.Message('note_on', note=n+21, velocity=v, time=new_time))\n",
     "                first_ = False\n",
     "            for n in off_notes:\n",
     "                new_time = last_time if first_ else 0\n",
-    "                track.append(mido.Message('note_off', note=n + 20, velocity=0, time=new_time))\n",
+    "                track.append(mido.Message('note_off', note=n+21, velocity=0, time=new_time))\n",
     "                first_ = False\n",
     "            last_time = 0\n",
     "    return mid_new"
@@ -122,7 +122,7 @@
     "print (\"train_labels.shape: \", train_labels.shape)\n",
     "\n",
     "midi_file = convert_array_to_midi(train_labels[0], length_seconds=15, tempo=500_000)\n",
-    "midi_file.save('data/midi/test_midi_file.mid')"
+    "#midi_file.save('data/midi/test_midi_file.mid')"
    ]
   }
  ],
