--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -307,7 +307,7 @@
     "    return resized_array\n",
     "\n",
     "# converts a midi array to a list of arrays\n",
-    "def midi_to_arrays(midi_array, num_arrays):\n",
+    "def midi_to_arrays(midi_array, num_arrays, array_length):\n",
     "    midi_arrays = []\n",
     "    split_midi_arrays = np.array_split(midi_array, num_arrays)\n",
     "    #print (\"midi array len: \", len(midi_array))\n",
@@ -315,7 +315,7 @@
     "    for i in range(len(split_midi_arrays)):\n",
     "        #print (\"shape: \", split_midi_arrays[i].shape)\n",
     "        # only add array if correct size\n",
-    "        if split_midi_arrays[i].shape == (tensor_size, NUM_FEATS):\n",
+    "        if split_midi_arrays[i].shape == (array_length, NUM_FEATS):\n",
     "            midi_arrays.append(split_midi_arrays[i])\n",
     "    return midi_arrays\n",
     "\n",
@@ -423,7 +423,7 @@
     "    #print (\"shrinked midi_array.shape: \", midi_array.shape)\n",
     "\n",
     "    # create label arrays\n",
-    "    labels_list = midi_to_arrays(midi_array, len(feats_list))\n",
+    "    labels_list = midi_to_arrays(midi_array, len(feats_list), feats_list.shape[1])\n",
     "    # return numpy arrays\n",
     "    labels_list = np.array(labels_list, dtype='int64')\n",
     "    \n",
@@ -443,7 +443,7 @@
     "from ipynb.fs.full.convert_to_midi import convert_array_to_midi\n",
     "\n",
     "# get correct index\n",
-    "train_index = 800\n",
+    "train_index = 666\n",
     "data = train_csv[train_index]\n",
     "print (\"data.name: \", data.audio_filename, \" duration: \", data.duration, \" sec\")\n",
     "data_id = '_' + data.audio_filename.split('/')[2]\n",
@@ -475,7 +475,6 @@
     "        os.mkdir('data/midi')\n",
     "# save to file\n",
     "np.save(\"data/midi/data\" + data_id + \".npy\", labels, allow_pickle=True)\n",
-    "\n",
     "\n",
     "# convert back to midi\n",
     "np_array = np.load(\"data/midi/data\" + data_id + \".npy\", allow_pickle=True)\n",
