work on fixing model

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -326,6 +326,7 @@
     "    f.set_figheight(10)\n",
     "    plot.imshow(midi_array, cmap='binary', interpolation='None', aspect=\"auto\")\n",
     "    plot.show()\n",
+    "    return f\n",
     "    \n",
     "def show_spectrograph(spec_array):\n",
     "    spec_array = np.flip(spec_array.T, axis=0)\n",
